Updated funnel schemas
- Updated the client/server Dockerfiles to use Python 3.6/grpcio 1.4.0
- Added new TrackFunnel rpc to server
- Generated code for client/server from new buda-protobufs schemas
- Updated test code in client to use new schemas
- Updated test code in client to send funnels and events

--- a/client/Makefile
+++ b/client/Makefile
@@ -5,7 +5,7 @@ all: run
 
 .PHONY: run
 run:
-	docker run -d --net=host $(IMAGE_NAME)
+	docker run --net=host $(IMAGE_NAME)
 
 .PHONY: build
 build:
