--- a/client/server/Dockerfile
+++ b/client/server/Dockerfile
@@ -1,8 +1,4 @@
-FROM python:3.6
-
-ENV GRPC_PYTHON_VERSION 1.4.0
-RUN python -m pip install --upgrade pip
-RUN pip install grpcio==${GRPC_PYTHON_VERSION} grpcio-tools==${GRPC_PYTHON_VERSION}
+FROM grpc/python:1.0
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
