--- a/kubernetes/events-collector.service.yaml
+++ b/kubernetes/events-collector.service.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: events-collector-service
+  name: events-collector
+  namespace: data
   labels:
     app: events-collector
 spec:
   ports:
     - name: grpc
       port: 50051
-      protocol: TCP
-      targetPort: 50051
   selector:
     app: events-collector
