--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,7 @@ FROM grpc/python:1.4
 
 
 COPY client.py /usr/src/app/client.py
-COPY $(PWD)/../buda-python-0.3.0.tar.gz /tmp
+COPY buda-python-0.3.0.tar.gz /tmp
 
 COPY requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
