Subscription period updated events
Also did some refactoring of the client, started moving tests for different
event groups to seperate modules

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,7 @@
 FROM grpc/python:1.4
 
 
-COPY client.py /usr/src/app/client.py
+COPY $PWD /usr/src/app/
 
 COPY requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
