--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 boto3==1.9.107
 kiner==0.7.0
-buffer-buda==0.7.2
 grpcio==1.19.0
 protobuf==3.7.0
+grpcio-health-checking==1.13.0
+grpcio-tools==1.19.0
