--- a/kubernetes/events-collector.deployment.yaml
+++ b/kubernetes/events-collector.deployment.yaml
@@ -1,9 +1,18 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
     name: events-collector
     namespace: data
 spec:
+    minReadySeconds: 5
+    strategy:
+        type: RollingUpdate
+        rollingUpdate:
+            maxUnavailable: 1
+            maxSurge: 1
+    selector:
+        matchLabels:
+            app: events-collector
     template:
         metadata:
             labels:
@@ -11,8 +20,20 @@ spec:
         spec:
             containers:
                 - name: events-collector
-                  image: bufferapp/events-collector:0.4.0
+                  image: bufferapp/events-collector:0.5.0
                   imagePullPolicy: Always
+                  readinessProbe:
+                      periodSeconds: 5
+                      exec:
+                          command: ["/bin/grpc_health_probe", "-addr=:8080"]
+                  livenessProbe:
+                      periodSeconds: 5
+                      exec:
+                          command: ["/bin/grpc_health_probe", "-addr=:8080"]
+                  resources:
+                      limits:
+                          cpu: 500m
+                          memory: 950Mi
                   env:
                       - name: AWS_ACCESS_KEY_ID
                         valueFrom:
